--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,85 @@
 .App {
   text-align: center;
+  /* color: azure; */
+}
+body {
+  background: url(https://i.imgur.com/1RHbmJz.jpg) fixed no-repeat;
+  background-size: cover;
+  width: 100%;
+  padding-top: 4em;
+}
+.home-cta {
+  background-color: chocolate;
+  padding: 1em;
+  width: 15em;
+  margin: 1;
+  margin-left: 10em;
+  color: black;
+  font-size: 1em;
+  border-radius: 0.25em;
+  font-weight: 800;
+  text-shadow: -1px -1px 0 whitesmoke, 1px -1px 0 whitesmoke,
+    -1px 1px 0 whitesmoke, 1px 1px whitesmoke;
+  border: none;
+}
+img {
+  border: 10px solid whitesmoke;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.home-header,
+.plant-header,
+.chemical-header,
+.disease-header {
+  margin: 2.5em;
+  color: whitesmoke;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-header2 {
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  margin: 4.5em;
+  color: whitesmoke;
+}
+.home-container {
+  text-align: left;
+}
+.home-logo {
+  width: 15em;
+  height: 4em;
+  border: none;
+}
+.navbar {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
+.nav-container {
+  width: 100%;
+  display: flex;
+  height: 4em;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  background: whitesmoke;
+  padding: 0 12px;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.navbar-item {
+  padding: 1em;
+  text-decoration: none;
+  margin-right: 1em;
+}
+.disease-header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
 }
