--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,8 @@ img {
 }
 .home-header {
   font-size: 3em;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 .home-header2 {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
@@ -119,10 +121,12 @@ a {
 .chemical-list {
   margin-top: -3em;
 }
+
 .plant-item {
   float: left;
   margin: 1em;
 }
+
 .chem-item {
   float: left;
   margin: 1em;
