--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,7 @@ button:focus {
   background-color: chocolate;
   padding: 1em;
   width: 15em;
-  margin: 1;
+  margin: 1em;
   margin-left: 16em;
   color: black;
   font-size: 1em;
